Make sure the footer stretches

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -2,11 +2,15 @@
 @include normalize();
 
 html {
-  display: flex;
-  flex-direction: column;
   font-family: 'IBM Plex Sans', sans-serif;
   color: #333;
   font-size: 1.125rem;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 body:after {
@@ -125,6 +129,7 @@ ul.toc {
 }
 
 footer {
+  flex-grow: 1;
   background-color: white;
   padding: 1rem;
   color: #aaa;
